--- a/style.css
+++ b/style.css
@@ -4,19 +4,20 @@ body {
 }
 
 .title-container {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 40vw;
-margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40vw;
+  margin: 0 auto;
 }
+
 .gamebox {
   /* display: flex; 
   justify-content: space-between;
   align-items: center; */
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(1fr);
+  grid-template-rows: repeat(2, 1fr);
   background-color: white;
   border: 1.5px solid black;
   width: 85vw;
@@ -29,17 +30,28 @@ margin: 0 auto;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 0 5px;
+  /* padding: 0 5px; */
   border: 1px solid black;
 }
+
 .player {
-  border: solid 1px;
-  height: 30vh;
-  width: 25vw;
+  /* border: solid 1px; */
+  /* border-right: none; */
 }
 
 .player-title {
   color: black;
+}
+
+.controls {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  /* background-color: blue; */
+  grid-area: 2/1/3/2;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 2;
 }
 
 .alien-container {
@@ -48,15 +60,18 @@ margin: 0 auto;
   width: 100%;
   height: 100%;
   border: 1px solid;
+  grid-area: 1/2/3/3;
 }
 
 .aliens {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  background-color: goldenrod;
 }
+
 .alien {
-  border: 1px solid;
+  /* border: 1px solid; */
   height: 20vh;
   width: 20vw;
 }
@@ -67,6 +82,18 @@ margin: 0 auto;
   text-align: center;
   /* border-bottom: 1px solid; */
 }
+
+
+.console {
+  width: 85vw;
+  margin: auto;
+  height: 600px;
+  margin-bottom: 100px;;
+  color: white;
+  background-color: black;
+}
+
+
 
 .img-source {
   display: none;
