--- a/style.css
+++ b/style.css
@@ -47,12 +47,26 @@ body {
   display: flex;
   height: 100%;
   width: 100%;
+  align-items: center;
   /* background-color: blue; */
   grid-area: 2/1/3/2;
   grid-row-end: 3;
   grid-column-start: 1;
   grid-column-end: 2;
 }
+
+#num-aliens {
+  height: 1.7em;
+  width: 2.2em;
+  margin-left: 1em;
+  font-size: 16px;
+  margin: 0 .3em 0 .3em;
+}
+.num-aliens-lbl {
+  text-align: right;
+  margin-left: 1em;
+}
+
 .battle-btn {
   width: 70%;
   margin: auto;
@@ -60,6 +74,7 @@ body {
   border-radius: 3px;
   background-color: orangered;
   font-weight: bold;
+  margin-right: 1em;
 }
 .battle-btn:hover {
   background-color: olivedrab;
@@ -87,8 +102,12 @@ body {
 
 .alien {
   border: 1px solid;
-  height: 20vh;
-  width: 20vw;
+  /* height: 20vh;
+  width: 20vw; */
+  max-width: 20vw;
+  min-width: 5vw;
+  max-height: 20vh;
+  min-height: 5vh;
   padding: 5px;
 }
 
