--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200&display=swap');
+
+
 body {
   margin: 0;
-  font-family: monospace;
+  font-family: 'Anek Telugu', monospace;
 }
 
 .title-container {
@@ -47,50 +50,99 @@ body {
 
 /* ================== CONTROLS SECTION =============== */
 
-.controls {
+/* .controls {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 100%;
-  width: 100%;
+  height: 98%;
+  width: 98%;
   align-items: center;
   text-align: center;
-  background-color: aqua;
+  margin: auto;
   grid-area: 2/1/3/2;
+  border: .2px solid deeppink;
+} */
+
+.count-div {
+  display: flex;
+  justify-content: center;
 }
-                      
+.num-aliens-lbl {
+  text-align: right;
+  margin: .3em 0 .4em 0;
+  font-size: 14px
+}
 #num-aliens {
-  height: 1.7em;
+  height: 1.2em;
   width: 2.2em;
   margin-left: 1em;
   font-size: 16px;
   margin: 0 .3em 0 .3em;
 }
-.num-aliens-lbl {
-  text-align: right;
-  margin: .1em 0 .2em 0;
+
+
+.controls-inner {
+  display: flex;
+  flex-direction: column;
+}
+.controls-inner button {
+  height: 2.1em;
+  font-size: 12px;
+  /* width: fit-content; */
 }
 
 .battle-btn {
-  width: 92%;
-  height: 2.6em;
-  border-radius: 3px;
+  /* width: 40%; */
+  /* height: 2.6em; */
+  /* border-radius: 3px; */
   background-color: orangered;
   font-weight: bold;
-  margin: .2em .7em 0 0;
+  /* margin: .2em .7em 0 0; */
 }
+
 .battle-btn:hover {
   background-color: olivedrab;
 }
+
 .battle-btn:active {
   background-color: red;
 }
 
+.battle-options {
+  padding: 5px 0;
+}
+
+.continue-selected {
+  background-color: lime;
+}
+
+.retreat, .continue {
+  background-color: #c48;
+  color: white;
+}
+.retreat-selected {
+  background-color: blueviolet;
+}
+
 .results {
-  white-space: pre;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  white-space: pre; /* i don't remember why i did this*/
+  width: 90%;
+  height: 100%;
   text-align: left;
   padding: 0 .4em;
+  margin: auto;
+}
+.results p {
+  display: block;
+  width: 60%;
+  margin: 0;
+}
+
+.won-p1, .lost-p1 {
+  color: red;
 }
 
 
@@ -108,15 +160,18 @@ body {
 .aliens {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
+  /* justify-content: flex-start; */
   padding: .4em;
   /* background-color: goldenrod; */
 }
 
 .alien {
-  border: 1px solid;
+
+  border: 2px solid green;
   /* height: 20vh;
   width: 20vw; */
+  font-size: 12px;
   max-width: 20vw;
   min-width: 5vw;
   max-height: 20vh;
@@ -124,11 +179,27 @@ body {
   padding: 5px;
   margin: .2em;
 }
-.dead-alien {
-  background-color: orangered;
+
+.x {
+  position: relative;
+  top: -20%;
+  left: 50%;
+  width: 20%;
+  height: 30%;
+  transform: rotate(19deg);
+  border: 3px solid red;
+  opacity: .8;
 }
+
+.dead-alien {
+  background-color: black;
+  color: white;
+  border: 2px solid red;
+}
+
 .winning-alien {
   background-color: greenyellow;
+  border: 2px solid green;
 }
 
 .alien-label {
